--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -33,7 +33,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: core
-    ServiceToTest: 'core'
+    ServiceToTest: '*'
     ArtifactName: packages
     Artifacts:
     - name: Azure.Core
