--- a/sdk/resourcemanager/Azure.ResourceManager/tests/Azure.ResourceManager.Tests.csproj
+++ b/sdk/resourcemanager/Azure.ResourceManager/tests/Azure.ResourceManager.Tests.csproj
@@ -7,8 +7,8 @@
   
   <ItemGroup>
     <PackageReference Include="Azure.Identity" />
-    <!--<PackageReference Include="Azure.ResourceManager.Compute" />
-    <PackageReference Include="Azure.ResourceManager.Network" />-->
+    <PackageReference Include="Azure.ResourceManager.Compute" />
+    <PackageReference Include="Azure.ResourceManager.Network" />
   </ItemGroup>
   
   <ItemGroup>
