--- a/sdk/modelsrepository/Azure.IoT.ModelsRepository/src/Azure.IoT.ModelsRepository.csproj
+++ b/sdk/modelsrepository/Azure.IoT.ModelsRepository/src/Azure.IoT.ModelsRepository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <AssemblyTitle>Azure IoT Models Repository SDK</AssemblyTitle>
@@ -18,6 +18,10 @@
   <ItemGroup>
     <PackageReference Include="Azure.Core" />
     <PackageReference Include="System.Text.Json" />
+    <!-- The explicit package reference is required to pull a version >4.6.0 which contains a vulnerability.
+         Not versioning will use the version defined in eng/Packages.Data.props.
+         System.Text.Encodings.Web is a dependency for System.Text.Json -->
+    <PackageReference Include="System.Text.Encodings.Web" />
   </ItemGroup>
 
   <!-- Common source from Azure.Core -->
