Increasing test pipeline timeout to 100mins since most builds are failing after 60mins.
Increasing test pipeline timeout to 100mins since most builds are failing after 60mins. Matched build timeout in pipeline config.

--- a/eng/pipelines/templates/jobs/ci.mgmt.yml
+++ b/eng/pipelines/templates/jobs/ci.mgmt.yml
@@ -38,7 +38,7 @@ jobs:
         condition: ne(variables['System.TeamProject'], 'public')
 
   - job: Test
-
+    timeoutInMinutes: 100
     strategy:
       maxParallel: $[ variables['MaxParallelTestJobs'] ]
       matrix:
