--- a/sdk/eventhub/Azure.ResourceManager.EventHubs/src/Azure.ResourceManager.EventHubs.csproj
+++ b/sdk/eventhub/Azure.ResourceManager.EventHubs/src/Azure.ResourceManager.EventHubs.csproj
@@ -7,5 +7,6 @@
       This is a beta preview version. This version uses a next-generation code generator that introduces important breaking changes, but also new features (such as intuitive authentication, custom HTTP pipeline, distributed tracing and much more).
     </Description>
     <PackageTags>azure;management;eventhub</PackageTags>
+    <NoWarn>$(NoWarn);CS1591;</NoWarn>
   </PropertyGroup>
 </Project>
