--- a/eng/common/pipelines/templates/steps/verify-agent-os.yml
+++ b/eng/common/pipelines/templates/steps/verify-agent-os.yml
@@ -15,4 +15,26 @@ steps:
       arguments: >
         -AgentImage "${{ parameters.AgentImage }}"
 
+  # Enable FIPS
+  - powershell: |
+      New-Object -TypeName System.Security.Cryptography.MD5CryptoServiceProvider
+      reg add HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Lsa\FipsAlgorithmPolicy /v Enabled /t REG_DWORD /d 1 /f
+    condition: |
+      and(
+        succeededOrFailed(),
+        contains(variables['OSVmImage'], 'windows'),
+        eq(variables['Container'], '')
+      )
+
+  # Verify FIPS is enabled (command should throw exception)
+  - powershell: |
+      New-Object -TypeName System.Security.Cryptography.MD5CryptoServiceProvider
+    ignoreLASTEXITCODE: 'true'
+    condition: |
+      and(
+        succeededOrFailed(),
+        contains(variables['OSVmImage'], 'windows'),
+        eq(variables['Container'], '')
+      )
+
   - template: /eng/common/pipelines/templates/steps/bypass-local-dns.yml
