Trigger KeyVault PR validation

--- a/sdk/keyvault/ci.yml
+++ b/sdk/keyvault/ci.yml
@@ -1,5 +1,7 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
 
+# Edit to trigger PR validation
+
 trigger:
   branches:
     include:
