Fix condition for windows

--- a/eng/common/pipelines/templates/steps/verify-agent-os.yml
+++ b/eng/common/pipelines/templates/steps/verify-agent-os.yml
@@ -23,7 +23,7 @@ steps:
     condition: |
       and(
         succeededOrFailed(),
-        contains(variables['OSVmImage'], 'windows'),
+        contains(variables['OSVmImage'], '2019'),
         eq(variables['Container'], '')
       )
 
@@ -35,7 +35,7 @@ steps:
     condition: |
       and(
         succeededOrFailed(),
-        contains(variables['OSVmImage'], 'windows'),
+        contains(variables['OSVmImage'], '2019'),
         eq(variables['Container'], '')
       )
 
