--- a/eng/Directory.Build.Common.props
+++ b/eng/Directory.Build.Common.props
@@ -30,6 +30,10 @@
       SemVer 2.0 is supported by NuGet since 3.0.0 (July 2015) in some capacity, and fully since 3.5.0 (October 2016).
     -->
     <NoWarn>$(NoWarn);NU5105</NoWarn>
+    <!-- 
+      https://github.com/dotnet/roslyn-analyzers/issues/5628
+    -->
+    <NoWarn>$(NoWarn);CA1812</NoWarn>
     <!--
       Disable some FxCop rules
      -->
