--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -4,6 +4,10 @@
       <_Parameter1>SourcePath</_Parameter1>
       <_Parameter2>$(MSBuildProjectDirectory)</_Parameter2>
     </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
+      <_Parameter1>TestProxyPath</_Parameter1>
+      <_Parameter2>$(NuGetPackageRoot)azure.sdk.tools.testproxy\1.0.0-dev.20211104.2\tools\net5.0\any\Azure.Sdk.Tools.TestProxy.dll</_Parameter2>
+    </AssemblyAttribute>
   </ItemGroup>
 
   <Import Project="$(RepoEngPath)\mgmt\Directory.Build.Mgmt.targets" Condition="'$(IsLegacyMgmtProject)' == 'true'" />
