--- a/sdk/template-LLC/Azure.Template.LLC/src/Azure.Template.LLC.csproj
+++ b/sdk/template-LLC/Azure.Template.LLC/src/Azure.Template.LLC.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Description>Azure SDK client library for the WebPubSub service</Description>
-    <AssemblyTitle>Azure SDK for WebPubSub</AssemblyTitle>
+    <Description>This is a LLC template project to demonstrate how to create a package that uses code generation as well as use for testing our build and release pipelines</Description>
+    <AssemblyTitle>Azure SDK LLC Template</AssemblyTitle>
     <Version>1.0.0-beta.4</Version>
-    <PackageTags>Azure, WebPubSub, SignalR</PackageTags>
+    <PackageTags>Azure Template</PackageTags>
     <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
     <NoWarn>$(NoWarn);419</NoWarn>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
