--- a/sdk/template-LLC/tests.yml
+++ b/sdk/template-LLC/tests.yml
@@ -3,5 +3,5 @@ trigger: none
 extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-tests.yml
   parameters:
-    ServiceDirectory: webpubsub
+    ServiceDirectory: template-LLC
     SupportedClouds: 'Public'
