--- a/sdk/operationalinsights/Microsoft.Azure.OperationalInsights/src/Microsoft.Azure.OperationalInsights.csproj
+++ b/sdk/operationalinsights/Microsoft.Azure.OperationalInsights/src/Microsoft.Azure.OperationalInsights.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Description>Provides Microsoft Azure Operational Insights data operations</Description>
     <AssemblyTitle>Microsoft Azure Operational Insights Data Library</AssemblyTitle>
-    <Version>1.1.0-beta.1</Version>
+    <Version>1.1.0</Version>
     <ApiCompatVersion>1.0.0</ApiCompatVersion>
     <PackageTags>Microsoft Azure OperationalInsights;OperationalInsights</PackageTags>
 	  <PackageReleaseNotes>This is a public release of the Operational Insights Data SDK.</PackageReleaseNotes>
