--- a/sdk/core/Azure.Core/tests/Azure.Core.Tests.csproj
+++ b/sdk/core/Azure.Core/tests/Azure.Core.Tests.csproj
@@ -33,8 +33,8 @@
     <Compile Include="..\src\Shared\HttpPipelineMessageHandler.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\NoBodyResponseOfT.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\ObjectNotDisposedException.cs" LinkBase="Shared" />
-    <Compile Include="..\src\Shared\OperationHelpers.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\OperationInternal.cs" LinkBase="Shared" />
+    <Compile Include="..\src\Shared\OperationInternalOfT.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\PageResponseEnumerator.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\RetriableStream.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\RequestRequestContent.cs" LinkBase="Shared" />
