--- a/sdk/template-LLC/Azure.Template.LLC/tests/Azure.Template.LLC.Tests.csproj
+++ b/sdk/template-LLC/Azure.Template.LLC/tests/Azure.Template.LLC.Tests.csproj
@@ -8,6 +8,7 @@
 
   <!-- Reference the Client Library -->
   <ItemGroup>
+    <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.Template.LLC.csproj" />
   </ItemGroup>
 
@@ -26,5 +27,10 @@
 
   <ItemGroup Condition="$(TargetFramework) == 'net461'">
     <Reference Include="System.Web" />
+  </ItemGroup>
+
+  <!-- Shared source from Azure.Core -->
+  <ItemGroup>
+    <Compile Include="$(AzureCoreSharedSources)ArrayBufferWriter.cs" LinkBase="Shared" />
   </ItemGroup>
 </Project>
