--- a/sdk/databox/Microsoft.Azure.Management.DataBox/tests/Microsoft.Azure.Management.DataBox.Tests.csproj
+++ b/sdk/databox/Microsoft.Azure.Management.DataBox/tests/Microsoft.Azure.Management.DataBox.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="SessionRecords\**\*.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
