--- a/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
+++ b/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
@@ -4,7 +4,11 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Network"/>
+    <PackageReference Include="Azure.ResourceManager.Network" />
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="SessionRecords\DatabaseTests\" />
   </ItemGroup>
 </Project>
