--- a/sdk/deviceupdate/Azure.ResourceManager.DeviceUpdate/tests/Azure.ResourceManager.DeviceUpdate.Tests.csproj
+++ b/sdk/deviceupdate/Azure.ResourceManager.DeviceUpdate/tests/Azure.ResourceManager.DeviceUpdate.Tests.csproj
@@ -2,4 +2,7 @@
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.DeviceUpdate.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SessionRecords\" />
+  </ItemGroup>
 </Project>
