--- a/eng/Directory.Build.Common.props
+++ b/eng/Directory.Build.Common.props
@@ -243,6 +243,14 @@
     <RunSettingsFilePath Condition="'$(AZURE_SKIP_DEFAULT_RUN_SETTINGS)' != 'true'">$(RepoEngPath)\nunit.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
+  <!-- Set global test timeout of 5 seconds -->
+  <ItemGroup Condition="'$(IsTestProject)' == 'true'">
+    <AssemblyAttribute Include="NUnit.Framework.Timeout">
+      <_Parameter1>500o</_Parameter1>
+      <_Parameter1_TypeName>System.Int32</_Parameter1_TypeName>
+    </AssemblyAttribute>
+  </ItemGroup>
+
   <PropertyGroup Condition="'$(IsPerfProject)' == 'true' or '$(IsStressProject)' == 'true'">
     <ServerGarbageCollection>true</ServerGarbageCollection>
   </PropertyGroup>
