--- a/sdk/core/System.Memory.Data/tests/System.Memory.Data.Tests.csproj
+++ b/sdk/core/System.Memory.Data/tests/System.Memory.Data.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
     <IsTestProject>true</IsTestProject>
+    <IsOptOutOfGlobalTestTimeout>true</IsOptOutOfGlobalTestTimeout>
   </PropertyGroup>
   
   <ItemGroup>
