--- a/sdk/network/Azure.ResourceManager.Network/Directory.Build.props
+++ b/sdk/network/Azure.ResourceManager.Network/Directory.Build.props
@@ -3,4 +3,5 @@
     Add any shared properties you want for the projects under this package directory that need to be set before the auto imported Directory.Build.props
   -->
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory).., Directory.Build.props))\Directory.Build.props" />
+  <IsOptOutOfGlobalTestTimeout>true</IsOptOutOfGlobalTestTimeout>
 </Project>
