root opt out for EventHubs

--- a/sdk/eventhub/Directory.Build.props
+++ b/sdk/eventhub/Directory.Build.props
@@ -10,6 +10,7 @@
   <PropertyGroup Condition="$(MSBuildProjectName.StartsWith('Azure.')) and $(MSBuildProjectName.Contains('.Samples'))">
     <IsSamplesProject>true</IsSamplesProject>
     <IsTestSupportProject>true</IsTestSupportProject>
+    <IsOptOutOfGlobalTestTimeout>true</IsOptOutOfGlobalTestTimeout>
   </PropertyGroup>
 
   <!-- Import the common SDK build properties. -->
