--- a/sdk/keyvault/samples/Directory.Build.props
+++ b/sdk/keyvault/samples/Directory.Build.props
@@ -20,4 +20,7 @@
     <InheritDocEnabled>false</InheritDocEnabled>
     <IsShippingLibrary>false</IsShippingLibrary>
   </PropertyGroup>
+  <PropertyGroup>
+    <IsOptOutOfGlobalTestTimeout>true</IsOptOutOfGlobalTestTimeout>
+  </PropertyGroup>
 </Project>
