exclude Microsoft.Azure.WebJobs.Extensions.Storage.*

--- a/sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage.Blobs/tests/Microsoft.Azure.WebJobs.Extensions.Storage.Blobs.Tests.csproj
+++ b/sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage.Blobs/tests/Microsoft.Azure.WebJobs.Extensions.Storage.Blobs.Tests.csproj
@@ -15,4 +15,7 @@
     <ProjectReference Include="..\..\Microsoft.Azure.WebJobs.Extensions.Storage.Queues\src\Microsoft.Azure.WebJobs.Extensions.Storage.Queues.csproj" />
     <ProjectReference Include="..\src\Microsoft.Azure.WebJobs.Extensions.Storage.Blobs.csproj" />
   </ItemGroup>
+  <PropertyGroup>
+    <IsOptOutOfGlobalTestTimeout>true</IsOptOutOfGlobalTestTimeout>
+  </PropertyGroup>
 </Project>
