--- a/sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage.Queues/tests/Microsoft.Azure.WebJobs.Extensions.Storage.Queues.Tests.csproj
+++ b/sdk/storage/Microsoft.Azure.WebJobs.Extensions.Storage.Queues/tests/Microsoft.Azure.WebJobs.Extensions.Storage.Queues.Tests.csproj
@@ -14,4 +14,7 @@
     <ProjectReference Include="..\..\Microsoft.Azure.WebJobs.Extensions.Storage.Common\tests\Microsoft.Azure.WebJobs.Extensions.Storage.Common.Tests.csproj" />
     <ProjectReference Include="..\src\Microsoft.Azure.WebJobs.Extensions.Storage.Queues.csproj" />
   </ItemGroup>
+  <PropertyGroup>
+    <IsOptOutOfGlobalTestTimeout>true</IsOptOutOfGlobalTestTimeout>
+  </PropertyGroup>
 </Project>
