--- a/sdk/template-dataplanecodegen/Azure.Template.DataplaneCodeGen/src/Azure.Template.DataplaneCodeGen.csproj
+++ b/sdk/template-dataplanecodegen/Azure.Template.DataplaneCodeGen/src/Azure.Template.DataplaneCodeGen.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Description>This is a LLC template project to demonstrate how to create a package that uses code generation as well as use for testing our build and release pipelines</Description>
-    <AssemblyTitle>Azure SDK LLC Template</AssemblyTitle>
+    <Description>This is a Dataplane Code Gen template project to demonstrate how to create a package that uses code generation as well as use for testing our build and release pipelines</Description>
+    <AssemblyTitle>Azure SDK Dataplane Code Gen Template</AssemblyTitle>
     <Version>1.0.0-beta.1</Version>
     <PackageTags>Azure Template</PackageTags>
     <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
